--- a/client/src/assets/sass/page/_skills.scss
+++ b/client/src/assets/sass/page/_skills.scss
@@ -1,8 +1,12 @@
+input.search {
+	width: 300px;
+	display: block;
+}
+
 .skills {
-	
-	input {
-		width: 100px;
-	}
+	width: 33%;
+	display: inline-block;
+	vertical-align: top;
 
 	textarea {
 		display: block;
@@ -12,18 +16,22 @@
 		list-style-type: none;
 	}
 
-	.inline > * {
-		display: inline-block;
-	}
-
-
 	.notes {
-		width: 50%;
-		 
+
 		textarea {
 			width: 100%;
 			height: 135px;
 			resize: none;
 		}
 	}
+
+	button {
+		margin-top: 8px;
+		margin-bottom: 10px
+	}
+}
+
+.editable-click {
+	border: dashed 1px #428bca;
+	line-height: 19.8px;
 }
