--- a/client/src/app/header.tpl.html
+++ b/client/src/app/header.tpl.html
@@ -20,6 +20,7 @@
                 <li ng-if="!isAuthenticated()" ng-class="{active: isActive('/contact')}"><a href="/contact">Contact</a></li>
                 <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account')}"><a href="/account">My Account</a></li>
                 <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/settings')}"><a href="/account/settings">Settings</a></li>
+                <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/skills')}"><a href="/account/skills">Skills</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!isAuthenticated()"><a href="/login"><i class="fa fa-user"></i> Sign In</a></li>
