--- a/client/src/app/account/account.tpl.html
+++ b/client/src/app/account/account.tpl.html
@@ -41,53 +41,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-6">
-        <div class="page-header">
-            <h1>Skills</h1>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <a href="#">
-                    <div class="col-sm-12 well"><b>Offense</b></div>
-                </a>
-            </div>
-            <div class="col-sm-6">
-                <a href="#">
-                    <div class="col-sm-12 well"><b>Defense</b></div>
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <a href="#">
-                    <div class="col-sm-12 well"><b>Footwork</b></div>
-                </a>
-            </div>
-            <div class="col-sm-6">
-                <a href="#">
-                    <div class="col-sm-12 well"><b>Combos</b></div>
-                </a>
-            </div>
-        </div> 
-    </div>
-    <div class="col-sm-6">
-        <div class="page-header">
-            <h1>Sparring</h1>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <h3>Partner Profiles</h3>
-                <ul>
-                    <li>Eli</li>
-                    <li>Matt</li>
-                    <li>Cameron</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
     <div class="col-sm-12">
-        
+      <h2>Recenty Activity</h2>
+      <div> <!-- Bind to a history schema..get like latest 10 modifications -->
+          
+      </div>  
     </div>
 </div>
