--- a/client/src/app/header.tpl.html
+++ b/client/src/app/header.tpl.html
@@ -18,12 +18,14 @@
                 <li ng-if="!isAuthenticated()" ng-class="{active: isActive('/about')}"><a href="/about">About</a></li>
                 <li ng-if="!isAuthenticated()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign Up</a></li>
                 <li ng-if="!isAuthenticated()" ng-class="{active: isActive('/contact')}"><a href="/contact">Contact</a></li>
-                <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account')}"><a href="/account">My Account</a></li>
-                <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/settings')}"><a href="/account/settings">Settings</a></li>
+                <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account')}"><a href="/account">Dashboard</a></li>
+                <!-- <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/settings')}"><a href="/account/settings">Settings</a></li> -->
+                <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/training')}"><a href="/account/training">Training Log</a></li>
                 <li ng-if="isAuthenticated()" ng-class="{active: isActive('/account/skills')}"><a href="/account/skills">Skills</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!isAuthenticated()"><a href="/login"><i class="fa fa-user"></i> Sign In</a></li>
+                 <!-- Turn this into a drop down menu with Sign Out and Settings-->
                 <li ng-if="isAuthenticated()"><a href="" ng-click="logout()"><i class="fa fa-user"></i> Sign Out</a></li>
             </ul>
         </div>
