Updated user experience on Skills page
Added a button state for when results are saved. Updated xeditable icons
to use font awesome. Added ability to remove of skills. Fixed some minor
UI bugs.

--- a/client/src/app/account/skills/skills.tpl.html
+++ b/client/src/app/account/skills/skills.tpl.html
@@ -10,15 +10,15 @@
                         <tab heading="{{ category.name }}" ng-repeat="category in division.categories | filter:{ types: { name:searchText } }">
                             <ul>
                                 <li class="skill" ng-repeat="skill in category.types | filter:searchText">
+                                    <a class="remove-skill" href="" ng-click="removeSkill($parent.$parent.$index, $parent.$index, $index)">
+                                        <i class="fa fa-minus-circle" title="Remove skill"></i> 
+                                    </a>
                                     <div>
                                         <h4 editable-text="skill.name">{{ skill.name }}</h4>
                                         <select ng-options="mastery for mastery in masteryLevels" ng-model="skill.mastery">
                                             <option value="">Select your mastery</option>
                                         </select>
-                                        <!-- Progress bar here-->
-                                    </div>
-                                    <div class="notes">
-                                        <textarea ng-model="skill.notes" placeholder="Add some notes">{{ skill.notes }}</textarea>
+                                        <textarea class="notes" ng-model="skill.notes" placeholder="Add some notes">{{ skill.notes }}</textarea>
                                     </div>
                                 </li>
                                 <li>
@@ -30,7 +30,10 @@
                 </tab>
             </tabset>
             <div>
-                <button type="submit" ng-click="save()">Save</button>
+                <button type="submit" class="btn btn-primary" ng-click="save()">
+                    <span>Save<span ng-show="saved">d</span><span>
+                    <i class="fa fa-check-circle" ng-show="saved"></i>
+                </button>
             </div>
         </div>
     </div>
