--- a/client/src/assets/sass/page/_skills.scss
+++ b/client/src/assets/sass/page/_skills.scss
@@ -4,10 +4,29 @@
 	li {
 		list-style-type: none;
 	}
+
+	form.editable-text {
+		display: block;
+		margin-top: 10px;
+	}
+
+	.skill {
+		
+		select {
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+
+		.notes {
+			width: 100%;
+			height: 135px;
+			resize: none;
+		}
+	}
 }
 
 
-@media (min-width: $screen-md-min) {
+@media (min-width: $screen-sm-min) {
 	input.search {
 		width: 300px;
 		display: block;
@@ -20,8 +39,6 @@
 
 		.notes {
 			width: 50%;
-			height: 135px;
-			resize: none;
 		}
 
 		button {
@@ -43,14 +60,14 @@
 				display: block;
 				margin-top: 10px;
 			}
+
+			.notes {
+				width: 50%;
+			}
 		}
 
 		.editable-buttons {
 			vertical-align: baseline;
-		}
-
-		select {
-			margin-bottom: 10px;
 		}
 	}
 
