--- a/client/src/assets/sass/page/_skills.scss
+++ b/client/src/assets/sass/page/_skills.scss
@@ -13,7 +13,6 @@
 	.skill {
 		
 		select {
-			margin-top: 10px;
 			margin-bottom: 10px;
 		}
 
@@ -21,6 +20,7 @@
 			width: 100%;
 			height: 135px;
 			resize: none;
+			margin-bottom: 20px;
 		}
 	}
 }
